Experiments with saving and reusing commands
