# api/terminal.js
@@ -1,3 +1,5 @@
+const {lastCommand} = require("./lastCommand");
+const {saveLastCommand} = require("./commandHandler");
 const { exec } = require('child_process');
 
 function handler(req, res) {
@@ -23,8 +25,16 @@ function handler(req, res) {
                 console.error(`Error executing command: ${error.message}`); // Log error to console
                 return res.status(500).json({ message: `Error executing command: ${error.message}` });
             }
+            lastCommand.type = 'terminal';
+            lastCommand.body = req.body;
             console.log(`Command executed successfully. Output: ${stdout || stderr}`); // Log output to console
-            return res.status(200).json({ message: 'Command executed successfully.', output: stdout || stderr });
+            let output = stdout || stderr;
+            if(output.length < 4097) {
+                return res.status(200).json({ message: 'Command executed successfully.', output  });
+            } else {
+                return res.status(200).json({ message: 'Command executed successfully. But size is too big, returning 3900 first symbols', output: output.substr(0, 3900)  });
+            }
+
         });
     } else {
         res.status(405).json({ message: 'Method not allowed. Please use POST.' });
